# OpenPlotLib

./: .gitignore  CMakeLists.txt  ReadMe  create_shader.cmake
res/shaders/: Fragment.frag  Vertex.vert  empty.frag  empty.vert
res/shaders/scatter_plot_shaders/: points_fragment.frag
src/: Application.cpp  BarnsleyFernApp.cpp  ChaosSimApp.cpp  GUIManager.cpp  GUIManager.h  GraphGUI.cpp  GraphGUI.h  OpenPlotLib.cpp  SierpinskiApp.cpp  VertexBuffer.cpp  VertexBuffer.h  program.cpp  program.h  shader.cpp  shader.h  shaders.h
src/GL/: GUIManager.cpp  GUIManager.h  VertexBuffer.cpp  VertexBuffer.h  program.cpp
src/Plots/: BarnsleyFernPlot.cpp  ChaosSim.cpp  Plot.h  ScatterPlot.cpp  SierpinskiPlot.cpp  _2DPlot.cpp  options.h
